# simplegui

./: Cargo.toml
examples/riscv/: Cargo.toml  Makefile  linker
examples/riscv/.cargo/: config
examples/riscv/src/: hal.rs  main.rs
src/: lib.rs
src/basic/: bar.rs  button.rs  edit.rs  graphic.rs  icon.rs  image.rs  label.rs  manager.rs  panel.rs  terminal.rs  window.rs
src/complex/: desktop.rs  mod.rs  snake.rs  terminal.rs
