[package]
name = "simplegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0"
embedded-text = "0"
virtio-input-decoder = {git = "https://github.com/os-module/virtio-input-decoder.git"}
tinybmp = "0.3.1"
log = "0.4.14"
spin = "0.9.2"
oorandom = "11.1.3"

[dev-dependencies]
